--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -169,10 +169,11 @@ if we are our experiences then we are both sides of them.
 		} ); //user_b
 
 		$( '#cron_b' ).click(function(){
-		    $.yote.util.control_table( {
+		    var cron = root.cron();
+		    var cron_ct = $.yote.util.control_table( {
 			attachpoint : '#apppanel',
 			plimit : 10,
-			item : root.cron(),
+			item : cron,
 			list_name : 'entries',
 			paginate_type : 'list',
 			title : 'Crons',
@@ -236,7 +237,7 @@ if we are our experiences then we are both sides of them.
 					    return '<div id="cron_sched_' + entry.id + '"></div><div id="cron_sched_new_' + entry.id + '"></div>';
 					},
 					after_render : function( entry ) {
-					    $.yote.util.control_table( {
+					    var ct = $.yote.util.control_table( {
 						attachpoint : '#cron_sched_' + entry.id,
 						plimit : 100,
 						item : entry,
@@ -244,24 +245,31 @@ if we are our experiences then we are both sides of them.
 						include_remove : true,
 						column_headers : [ 'Scheduled Time' ],
 						columns : [
-						    { render : function( txt ) { return txt; } }
+						    { render : function( txt ) { return new Date( 1000 * txt ).toUTCString(); } }
 						],
 						new_attachpoint : '#cron_sched_new_' + entry.id,
 						new_column_titles : [ 'when ( epoch seconds )' ],
 						remove_function : function( str, idx ) {
 						    entry.remove_from( { name : 'scheduled_times', indexes : [ idx ] } );
+						    cron.update_entry( entry );
+						    cron_ct.refresh();
 						},
 						new_function : function() {
 						    return $( '#cron_new_rep_at' ).val();
+						},
+						after_new_function : function( it ) {
+						    cron.update_entry( entry );
+						    cron_ct.refresh();
 						},
 						new_columns : [
 						    {
 							field : 'scheduled_time_' + $.yote.util.next_id(),
 							on_create : function( str, id ) {
-							    entry.add_to( { name : 'scheduled_times', items : [ $( '#' + id ).val() ] } );
+							    var do_when = new Date( $( '#' + id ).val() );
+							    entry.add_to( { name : 'scheduled_times', items : [ do_when.getTime()/1000 ] } );
 							},
 							render : function( id ) {
-							    return '<input type="text" id="' + id + '">';
+							    return '<input type="datetime-local" id="' + id + '">';
 							}
 						    }
 						]
@@ -279,10 +287,10 @@ if we are our experiences then we are both sides of them.
 			after_new_function : function( newitem ) {
 			    this.item.init_entry( newitem );
 			}
-		    } );
+		    } ); //cron_ct
 		} ); //cron_b
 
-	    }
+	    } //if is root
 	    else {
 		$( '#appwrapper' ).hide();
 		$( '#errpanel' ).show();
