fixed javascript bug that lead to duplicate objects

--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -264,7 +264,7 @@ if we are our experiences then we are both sides of them.
 						'repeat_times'
 					    ],
 					    after_new_function : function( newitem ) {
-						if( 1*newitem.get( 'repeat_times' ) > 0 ) {
+						if( 1*newitem.get( 'repeat_times' ) == 0 ) {
 						    newitem.set( 'repeat_infinite', 1 );
 						}
 					    }
