--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -230,7 +230,7 @@ if we are our experiences then we are both sides of them.
 					//repeat
 				    },
 				    after_render : function( entry ) {
-					$.yote.util.control_table( {
+					var rep_ct = $.yote.util.control_table( {
 					    attachpoint : '#cron_rep_' + entry.id,
 					    show_count : false,
 					    plimit : 100,
@@ -241,26 +241,57 @@ if we are our experiences then we are both sides of them.
 					    columns : [
 						$.yote.util.col_edit( 'repeat_interval', null, function( val, item ) {
 						    item.set( 'repeat_interval', val );
-						    cron.update_entry( item );
+						    cron.update_entry( entry );
+						    cron_ct.refresh();
 						} ),
 						{
 						    render : function( item ) {
-							var buf = item.get( 'repeat_times' ) * 1  == 0 ? " Infinite Repeat <BR>" : "";
+ 							var buf = '<input type="checkbox" ' + ( item.get('repeat_infinite') ? ' checked ' : '') + 
+							    'id="ed_' + item.id + '"> Infinite Repeat<BR>';
 							buf += $.yote.util.prep_edit( item, 'repeat_times' );
 							return buf;
 						    },
-						    after_render : function ( item, refr ) {
-							$.yote.util.implement_edit( item, 'repeat_times', refr );
+						    after_render : function ( item, key ) {
+							$( '#ed_' + item.id ).click( function() {
+							    if( $( '#ed_' + item.id ).is( ':checked' ) ) {
+								item.set( 'repeat_infinite', 1 );
+							    }
+							    else {
+								item.set( 'repeat_infinite', 0 );
+							    }
+							    cron.update_entry( entry );
+							    cron_ct.refresh();
+							} );
+							$.yote.util.implement_edit( item, 'repeat_times', function() {
+							    cron_ct.refresh();
+							} );
 						    }
 						}
 					    ],
 					    new_attachpoint : '#cron_rep_new_' + entry.id,
 					    new_column_titles : [
 						'interval (s)',
+						'infinite repeat',
 						'times'
 					    ],
+					    new_required_by_function : function( txts ) {
+						console.log( [ "XX", $( txts[ 0 ] ).val().match( /\S/ ),
+							       $( txts[ 1 ] ).is( ':checked' ), 
+							       $( txts[ 2 ] ).val().match( /\S/ )  ] );
+						return $( txts[ 0 ] ).val().match( /\S/ ) != null && ( $( txts[ 1 ] ).is( ':checked' ) ||
+												       $( txts[ 2 ] ).val().match( /\S/ ) != null );
+					    },
 					    new_columns : [
 						'repeat_interval',
+						{
+						    field : 'repeat_infinite',
+						    render : function( cid ) {
+							return '<input type="checkbox" id="' + cid + '">';
+						    },
+						    on_create : function( item, id ) {
+							item.set( 'repeat_infinite', $( '#' + id ).val() );
+						    }
+						},
 						'repeat_times'
 					    ],
 					    after_new_function : function( newitem ) {
