added style to admin page

--- a/yote_root/html/admin.html
+++ b/yote_root/html/admin.html
@@ -59,6 +59,7 @@
       .sidenav { float: left; text-align: center; }
       button.sidenav { width : 120px; }
       ._ct_row { vertical-align: top }
+      ._ct_cell { border: 6px rgb(120,226,165) groove }
     </STYLE>
 
 <!--
