--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -8,12 +8,15 @@
  body { background-color:wheat }
 </style>
 
-<script src="/yote/js/jquery-latest.js"></script>
+<!--
+<script src="/yote/js/jquery-1.10.1.min.js"></script>
 <script src="/yote/js/jquery.cookie.js"></script>
 <script src="/yote/js/jquery.base64.min.js"></script>
 <script src="/yote/js/json2.js"></script>
 <script src="/yote/js/yote.js"></script>
 <script src="/yote/js/yote.util.js"></script>
+-->
+<script src="/yote/js/yote.unified.min.js"></script>
 <script>
     var tests = 0;
 var failed = 0;
